--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -91,7 +91,7 @@
                     "-pflash", "${workspaceFolder}\\build-vscode-buddy\\simulator\\eeprom_bank1.bin",
                     "-pflash", "${workspaceFolder}\\build-vscode-buddy\\simulator\\eeprom_bank2.bin",
                     "-nodefaults",
-                    "-chardev", "stdio,id=stm32_itm", "-d", "guest_errors"
+                    "-chardev", "stdio,id=stm32_itm"
                 ],
             },
             "linux": {
@@ -111,7 +111,6 @@
             "cwd": "${workspaceRoot}",
             "executable": "${workspaceRoot}/build-vscode-buddy/firmware",
             "request": "launch",
-            "showDevDebugOutput": "raw"
         },
         {
             "name": "GDB (QEMU)",
